--- a/HTML CSS PROJECTS/1_tribute.css
+++ b/HTML CSS PROJECTS/1_tribute.css
@@ -1,8 +1,20 @@
-*{
-    padding: 0;
-    margin: 0;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-body{
-    background-color: rgb(204, 196, 205);
+.container {
+  margin-left: 250px;
+  margin-right: 250px;
+  padding: 50px;
+  border: 6px solid black;
+  background-color: rgb(150, 208, 222);
+}
+
+.top-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 150px;
 }
